chore: update dependency